--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi pagina web 3</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 <body>
@@ -26,19 +26,21 @@
         </section>
         <hr>
         <section id="one_sec">
-        <h3 class="subtitle"><strong>SOPORTE</strong></h3>
-        <img src="img/computer.png" alt="PC" class="pc_image">
-        <P class="text">Brindamos soporte personalizado a todo tipo de computadoras</P>
+        <h3  class="subtitle"><strong>SERVICIOS</strong></h3>
+        <div class="carousel">
+        <img src="img/spotify.png" alt="Spotify" class="carousel-track">
+        <img src="img/netflix.png" alt="Netflix" class="carousel-track">
+        <img src="img/android.png" alt="Android" class="carousel-track">
+        <img src="img/apple_itunes.png" alt="Apple_itunes" class="carousel-track">
+        <img src="img/amazon.png" alt="Amazon" class="carousel-track">
+        <img src="img/windows.png" alt="Windows" class="carousel-track">
+        </div>
         </section>
         <hr>
         <section id="one_sec">
-        <h3  class="subtitle"><strong>SERVICIOS</strong></h3>
-        <img src="img/spotify.png" alt="Spotify" class="animated_image">
-        <img src="img/netflix.png" alt="Netflix" class="animated_image">
-        <img src="img/android.png" alt="Android" class="animated_image">
-        <img src="img/apple_itunes.png" alt="Apple_itunes" class="animated_image">
-        <img src="img/amazon.png" alt="Amazon" class="animated_image">
-        <img src="img/windows.png" alt="Windows" class="animated_image">
+        <h3 class="subtitle"><strong>SOPORTE</strong></h3>
+        <img src="img/computer.png" alt="PC" class="pc_image">
+        <P class="text">Brindamos soporte personalizado a todo tipo de computadoras</P>
         </section>
     </main><hr>
 
