--- a/index3.html
+++ b/index3.html
@@ -26,22 +26,23 @@
         </section>
         <hr>
         <section id="one_sec">
-        <h3  class="subtitle"><strong>SERVICIOS</strong></h3>
-        <div class="carousel">
-        <img src="img/spotify.png" alt="Spotify" class="carousel-track">
-        <img src="img/netflix.png" alt="Netflix" class="carousel-track">
-        <img src="img/android.png" alt="Android" class="carousel-track">
-        <img src="img/apple_itunes.png" alt="Apple_itunes" class="carousel-track">
-        <img src="img/amazon.png" alt="Amazon" class="carousel-track">
-        <img src="img/windows.png" alt="Windows" class="carousel-track">
-        </div>
-        </section>
-        <hr>
-        <section id="one_sec">
         <h3 class="subtitle"><strong>SOPORTE</strong></h3>
         <img src="img/computer.png" alt="PC" class="pc_image">
         <P class="text">Brindamos soporte personalizado a todo tipo de computadoras</P>
         </section>
+        <hr>
+        <section id="carousel">
+        <h3  class="subtitle"><strong>SERVICIOS</strong></h3>
+        <div class="carousel-track">
+        <img src="img/spotify.png" alt="Spotify">
+        <img src="img/netflix.png" alt="Netflix">
+        <img src="img/android.png" alt="Android">
+        <img src="img/apple_itunes.png" alt="Apple_itunes">
+        <img src="img/amazon.png" alt="Amazon">
+        <img src="img/windows.png" alt="Windows">
+        </div>
+        </section>
+        
     </main><hr>
 
     <footer>
