--- a/index2.html
+++ b/index2.html
@@ -11,12 +11,14 @@
 <body>
 <header>
     <h1 class="title"><strong>INICIO</strong></h1>
-    <ul>
-        <li>NOSOTROS</li>
-        <li>SOPORTE</li>
-        <li>SERVICIOS</li>
-        <li>CONTACTANOS</li>
-    </ul>
+    <nav>
+        <ul>
+            <li>NOSOTROS</li>
+            <li>SOPORTE</li>
+            <li>SERVICIOS</li>
+            <li>CONTACTANOS</li>
+        </ul>
+    </nav>
 </header><hr>
 
     <main id="main_content">
