--- a/index3.html
+++ b/index3.html
@@ -10,13 +10,29 @@
 
 <body>
 <header>
-    <h1 class="title"><strong>INICIO</strong></h1>
-    <ul>
-        <li>NOSOTROS</li>
-        <li>SOPORTE</li>
-        <li>SERVICIOS</li>
-        <li>CONTACTANOS</li>
-    </ul>
+    <nav class="navbar">
+        <div class="logo">🌟 MiLogo</div>
+        <ul class="nav-links">
+            <li><a href="#" class="icon">🏠 Inicio</a></li>
+            <li class="dropdown">
+                <a href="#" class="icon">🛠 Servicios</a>
+                <ul class="submenu">
+                    <li><a href="#">🔧 Desarrollo</a></li>
+                    <li><a href="#">📈 Análisis</a></li>
+                    <li><a href="#">📋 Consultoría</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="icon">📂 Proyectos</a>
+                <ul class="submenu">
+                    <li><a href="#">⚙ Proyecto A</a></li>
+                    <li><a href="#">🖥 Proyecto B</a></li>
+                    <li><a href="#">🔍 Proyecto C</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="icon">📞 Contacto</a></li>
+        </ul>
+    </nav>
 </header><hr>
 
     <main id="main_content">
