--- a/index3.html
+++ b/index3.html
@@ -17,17 +17,17 @@
             <li class="dropdown">
                 <a href="#" class="icon">🛠 Servicios</a>
                 <ul class="submenu">
-                    <li><a href="#">🔧 Desarrollo</a></li>
-                    <li><a href="#">📈 Análisis</a></li>
-                    <li><a href="#">📋 Consultoría</a></li>
+                    <li><a href="#"><span class="emoji">🔧</span> Desarrollo</a></li>
+                    <li><a href="#"><span class="emoji">📈</span> Análisis</a></li>
+                    <li><a href="#"><span class="emoji">📋</span> Consultoría</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="icon">📂 Proyectos</a>
                 <ul class="submenu">
-                    <li><a href="#">⚙ Proyecto A</a></li>
-                    <li><a href="#">🖥 Proyecto B</a></li>
-                    <li><a href="#">🔍 Proyecto C</a></li>
+                    <li><a href="#"><span class="emoji">⚙</span> ProyectoㅤA</a></li>
+                    <li><a href="#"><span class="emoji">🖥</span> ProyectoㅤB</a></li>
+                    <li><a href="#"><span class="emoji">🔍</span> ProyectoㅤC</a></li>
                 </ul>
             </li>
             <li><a href="#" class="icon">📞 Contacto</a></li>
